--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,55 @@
 body{
  padding-left: 10px;
  padding-right: 10px;
+ background-color: #F2E863;
+ colour:black;
+ font-family: Arial, Helvetica, sans-serif;
 
+}
+
+a{
+  color:#F25B35;
+}
+
+.items{
+  padding:10px;
+  text-align:center;
+  width:90%;
+  border-style:solid;
+  border-color:black;
+  margin:5px;
+  background-color: #F25B35;
+
+}
+.items .item{
+   border-style:solid;
+   border-color:black;
+   background-color: white;
+   padding:10px;
+   text-align:center;
+   float:left;
+   margin:10px;
+
+}
+.clearfix:after {
+   content: " "; /* Older browser do not support empty content */
+   visibility: hidden;
+   display: block;
+   height: 0;
+   clear: both;
+}
+
+.title {
+  text-align: center;
+  font-size: 30px;
+  font-weight: bold;
+  color:#F25B35;
+  padding: 20px;
+
+}
+
+p{
+  padding:10px;
 }
 
 .boxed {
